<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bisection Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="function_message">Please enter your function:</string>
    <string name="value">0</string>
    <string name="max">Max Iterations</string>
    <string name="tol">Tolerance</string>
    <string name="pointA">Point A</string>
    <string name="pointB">Point B</string>
    <string name="calc">Calculate</string>
    <string name="basicUsage">Basic Usage:</string>
    <string name="bisectButton">Bisection Method</string>
    <string name="usageInfo">- Ensure to specify multiplication, for example (7*x) in place of 7x.\n\n- To calculate the root after a given number of iterations, set the tolerance to 0.\n\n- If you wish to calculate an exact root, set the iterations to 0.\n\n- These can be used together, for example calculate the root after X iterations or to within a tolerance of X.\n\n- If using both, try to ensure your function has a root at 0. There is a check, but it\'s not infallible.</string>
    <string name="usagePage">Usage/Known Bugs</string>
    <string name="usage">There are several things you should know when using this app, as it\'s still not perfect:\n\n- When using a tolerance of 0, and a max iterations of 0 the calculation will repeat for a huge number of iterations if no exact root is found. To avoid doing this, try to ensure you have a root within a reasonable amount of iterations. To avoid infinite loops (division by 0), the tolerance is set minutely to be as close as possible, eliminating this risk.\n\n- If the calculation is going to take more than 500 iterations, a \&quot;Please wait…\&quot; message will appear to let you know it\'s going to take a little longer. This shouldn\'t need to occur on most calculations though.\n\n- When typing in multiplications, ensure to use (7*x) instead of 7x. This doesn\'t apply to cos(x) etc.\n\n- Intervals including negative numbers work just fine, there was originally a bug in the parser.\n\n- If you want to calculate the number of iterations needed to find the root within a specified accuracy, tap on the \&quot;Iterations\&quot; button and input your data as normal, but leave the Max Iterations as 0 then calculate.\n\n- When using \'e\', you should use the typical exp(x) form, I still need to add parser support for \'e\'.\n\n- If you spot any bugs, email me with a screenshot of the equation/interval/iterations/tolerance you\'re trying to use so I can replicate the issue.\n\n- If you need any other help, you can always contact me via the link in the About page.</string>
    <string name="author">Isaac Whitfield</string>
    <string name="link">&lt;a href=&quot;http://blog.zackehh.com/&quot;&gt;http://zackehh.com&lt;/a&gt;</string>
    <string name="bug">&lt;a href=&quot;http://is.gd/nFLKEL&quot;&gt;Report A Bug&lt;/a&gt;</string>
    <string name="about">This app started as a utility for myself to check my bisection calculations, but I decided it was probably of use to people as a quick way to check or calculate bisection results. I may add more features in future, but I feel it functions nicely and smoothly as it is now. If you want to say thanks for this app, you can &lt;a href=&quot;https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=4UGNNYEBE8RWC&quot;&gt;donate&lt;/a&gt; to show your appreciation.</string>
    <string name="Root">Root</string>
    <string name="Iterations">Iterations</string>

</resources>