<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".About"
    android:id="@+id/relativeSwipe" >
    
    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

     <View
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:layout_alignBottom="@+id/AppTitle"
         android:layout_alignLeft="@+id/AppTitle"
         android:background="#B6B6B6" />

     <TextView
         android:id="@+id/about"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/author"
         android:layout_alignLeft="@+id/AppTitle"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/AppTitle"
         android:layout_marginTop="3dp"
         android:gravity="center_vertical|center"
         android:text="@string/about"
         android:textStyle="italic" />

     <TextView
         android:id="@+id/link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/report"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="5dp"
         android:gravity="center"
         android:text="@string/link" />

     <TextView
         android:id="@+id/author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/link"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:gravity="center"
         android:layout_marginBottom="5dp"
         android:text="@string/author"
         android:textSize="16sp" />

     <TextView
         android:id="@+id/report"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="@string/bug" />
    
     </RelativeLayout>